crates/server/src/snapshots/server__inlay_hint__tests__base.snap
---
source: crates/server/src/inlay_hint.rs
expression: out
---
[
    InlayHint {
        position: Position {
            line: 4,
            character: 8,
        },
        label: String(
            "String",
        ),
        kind: Some(
            Type,
        ),
        text_edits: None,
        tooltip: None,
        padding_left: None,
        padding_right: None,
        data: None,
    },
]
